/*
 * CHANGELOG.
 */

10012005 - Added playsound_simple.c.
09142005 - Happy September. Patched smpeg.c and some other things to compile.
01062005 - Fixed Project Builder project files (Thanks, Martin!)
11122004 - Fixed automake nonsense. Fixed logic bug in voc decoder.
07032004 - Removed altcvt from the source tree. Started pounding out initial
           mixer implementation.
05152004 - Added Sound_NewSampleFromMem(), and implementation of RWops pooling.
05112004 - Added Sound_GetDuration() and moved total_time out of Sound_Sample
           struct and into it's opaque data...this fixes binary compatibility
           with apps written for SDL_sound 1.0.
05082004 - Started 1.1.0 development branch with code to determine the total
           length of a sample (thanks to Wesley, Eric, Wang, and Ahilan!)...
           this patch was originally committed to CVS on 10252003, but it is
           getting re-merged in the svn repository. Fixed "bootstrap" to
           work with MacOSX.
05072004 - Backed out some commits, converted repository to Subversion, and
           branched off to a 1.1.0 development tree. Changed MikMod URL...old
           one is now a porn site.  :(
10252003 - VOC decoder was broken. Now it isn't.
10142003 - Build system fix: acinclude.m4 had some word wrapping badness.
10122003 - Fixed "make dist" behaviour to not packaged generated docs, and
           made sure other files are always packaged, regardless of config.
           Upped version to 1.0.1.
10102003 - Changed some SDL_Error()s to __Sound_SetError() in new DLS code
           to fix linking issues.
10052003 - Fixed memory corruption when freeing DLS instruments,
           and bug when timidity is initialized multiple times (Thanks, Sam!).
09252003 - Sam Lantinga added support for DLS instruments to the MIDI decoder.
09132003 - Happy September. Added Speex (.spx) decoder.
08052003 - Fixed MIDI decoder on bigendian systems.